--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "tiktok-info-viewer",
   "version": "1.0.0",
-  "description": "实时查看TikTok用户公开信息的核心功能版，AI辅助开发",
-  "main": "index.js",
+  "description": "实时查看TikTok用户公开信息的核心功能版，AI辅助开发。",
+  "type": "module",
+  "main": "api/handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,9 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.9.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "axios": "^1.6.5", 
+    "cors": "^2.8.5",    
+    "dotenv": "^16.3.1", 
+    "express": "^4.18.2" 
   }
 }
